fix blog menu overflow

--- a/src/styles/headerDiv.css
+++ b/src/styles/headerDiv.css
@@ -13,6 +13,10 @@
         font-size: 1.7rem;
     } 
 
+.blog-menu{
+    right: 0
+}
+
 @media screen and (max-width: 768px) {
     .nav {
         flex-direction: column !important;
@@ -55,6 +59,10 @@
     .nav {
         flex-direction: column !important;
         font-size: 1rem;
+    }
+
+    .blog-menu{
+        right: unset
     }
 
     .navbar {
